--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" crossorigin="anonymous">
 
@@ -40,7 +41,7 @@
       <h3 class="center">Search</h3>
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="Receipt" id="searchInput" type="text" class="input-text">
+          <input placeholder="Receipt" id="searchInput" type="text" class="input-text" autofocus>
         </div>
       </div>
       <div class="center">
@@ -128,7 +129,7 @@
     <div id="inputContainer">
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="Type titel" id="imageTitel" type="text" class="validate input-text">
+          <input placeholder="Type title" id="imageTitel" type="text" class="validate input-text">
         </div>
       </div>
 
